force-app/main/default/objects/Media_Buys__c/Media_Buys__c.object-meta.xml
<CustomObject>
    <description>Performance Based Media Buy module documenting aff interest in each campaign.</description>
    <label>Media Buy</label>
    <nameField>
        <label>Media Buys</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Buys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>