force-app/main/default/objects/Media_Buys__c/fields/Advertiser_Account__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertiser Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Media Buys</relationshipLabel>
    <relationshipName>Media_Buys</relationshipName>
    <type>Lookup</type>
</CustomField>