force-app/main/default/objects/Media_Buys__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaigns__c</referenceTo>
    <relationshipLabel>Media Buys</relationshipLabel>
    <relationshipName>Media_Buys</relationshipName>
    <type>Lookup</type>
</CustomField>