force-app/main/default/objects/Media_Buys__c/fields/Publisher_Name__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Media Buys (Publisher List)</relationshipLabel>
    <relationshipName>Publisher_MediaBuy_List</relationshipName>
    <type>Lookup</type>
</CustomField>