force-app/main/default/objects/Media_Buys__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Advertiser_Account__c</columns>
    <columns>Campaign__c</columns>
    <columns>Publisher_Name__c</columns>
    <columns>Margin__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>